Added more problems